Fix filename creation and deleting with illegal file names. UDF has a machanism for it but it allowed to create a file with a name it considered illegal that then couldn't be deleted with the same name.

Fixes PR kern/50608. When confirmed, it can be closed.